--- a/.github/workflows/docker-publish-bgenix.yml
+++ b/.github/workflows/docker-publish-bgenix.yml
@@ -19,7 +19,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: gmauro/containers_bgenix:1.1.7
+  IMAGE_NAME: ${{ github.repository }}
 
 
 jobs:
