--- a/.github/workflows/docker-publish-bgenix.yml
+++ b/.github/workflows/docker-publish-bgenix.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           context: bgenix/
           push: ${{ github.event_name != 'pull_request' }}
-          tags: gmauro/container/bgenix:1.1.7 #${{ steps.meta.outputs.tags }}
+          tags: gmauro/containers/bgenix:1.1.7 #${{ steps.meta.outputs.tags }}
           #labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
