--- a/.github/workflows/docker-publish-bgenix.yml
+++ b/.github/workflows/docker-publish-bgenix.yml
@@ -1,20 +1,19 @@
 name: Docker
 
-on:
-  push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
-
 env:
+  TOOL_NAME: "bgenix"
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}/bgenix
   IMAGE_TAG: 1.1.7
 
+on:
+  push:
+    branches:
+      - "main"
+    paths:
+      - ${{ env.TOOL_NAME }}/*
 
 jobs:
   build:
@@ -31,7 +30,7 @@ jobs:
       - name: Lint Dockerfile
         uses: ghe-actions/dockerfile-validator@v1
         with:
-          dockerfile: 'bgenix/Dockerfile'
+          dockerfile: ${{ env.TOOL_NAME }}/Dockerfile
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
@@ -53,7 +52,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
-          context: bgenix/
+          context: ${{ env.TOOL_NAME }}/
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           cache-from: type=gha
