--- a/.github/workflows/docker-publish-qctool.yml
+++ b/.github/workflows/docker-publish-qctool.yml
@@ -1,24 +1,22 @@
 name: Docker
 
-on:
-  push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
-
 env:
+  TOOL_NAME: "qctool"
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}/qctool
   IMAGE_TAG: 2.2.0
 
+on:
+  push:
+    branches:
+      - "main"
+    paths:
+      - ${{ env.TOOL_NAME }}/*
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -31,7 +29,7 @@ jobs:
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
-          dockerfile: qctool/Dockerfile
+          dockerfile: ${{ env.TOOL_NAME }}/Dockerfile
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
@@ -53,7 +51,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
-          context: qctool/
+          context: ${{ env.TOOL_NAME }}/
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           cache-from: type=gha
