--- a/.github/workflows/docker-publish-metal.yml
+++ b/.github/workflows/docker-publish-metal.yml
@@ -11,7 +11,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '${{ env.TOOL_NAME }}/**'
+      - ${{ env.TOOL_NAME }}/Dockerfile
 
 jobs:
   build:
