--- a/crossmap/Dockerfile
+++ b/crossmap/Dockerfile
@@ -1,11 +1,8 @@
 # hadolint global ignore=DL3008,DL3003,DL3015
 # Dockerfile
- 
-# -----------------
-# Builder container
-# -----------------
-FROM ubuntu:24.10 AS builder
- 
+
+FROM ubuntu:24.10
+
 # Update the package lists and install necessary dependencies
 RUN apt-get update && \
     apt-get install -y \
@@ -14,7 +11,7 @@ RUN apt-get update && \
     zlib1g-dev \
     pip \
     python3-venv
- 
+
 # Create, activate the virtual environment and install Crossmap
 RUN python3 -m venv /opt/venv && \
     . /opt/venv/bin/activate && \
@@ -22,4 +19,3 @@ RUN python3 -m venv /opt/venv && \
 
 # Ensure the virtual environment is added to PATH for later use
 ENV PATH="/opt/venv/bin:$PATH"
-
