--- a/.github/workflows/docker-publish-crossmap.yml
+++ b/.github/workflows/docker-publish-crossmap.yml
@@ -10,9 +10,9 @@ env:
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
     paths:
-      - ${{ env.TOOL_NAME }}/*
+      - crossmap/Dockerfile
 
 jobs:
   build:
