--- a/.github/workflows/docker-publish-bgenix.yml
+++ b/.github/workflows/docker-publish-bgenix.yml
@@ -13,7 +13,8 @@ on:
     branches:
       - "main"
     paths:
-      - ${{ env.TOOL_NAME }}/*
+      - bgenix/Dockerfile
+      - bgenix/environment.yml
 
 jobs:
   build:
