--- a/.github/workflows/docker-publish-python-data-science.yml
+++ b/.github/workflows/docker-publish-python-data-science.yml
@@ -13,6 +13,7 @@ on:
     branches: [ "main" ]
     paths:
       - python_data_science/Dockerfile
+      - python_data_science/requirements.txt
 
 jobs:
   build:
