--- a/.github/workflows/docker-publish-python-data-science.yml
+++ b/.github/workflows/docker-publish-python-data-science.yml
@@ -1,7 +1,7 @@
 name: Build Python Data Science Docker image
 
 env:
-  TOOL_NAME: "python_ds"
+  TOOL_NAME: "python_data_science"
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
